--- a/trunk/module/MagazinePublishRest/test/TestConfig.php.dist
+++ b/trunk/module/MagazinePublishRest/test/TestConfig.php.dist
@@ -2,7 +2,9 @@
 return array(
     'modules' => array(
         'Album',
-        'AlbumRest'
+        'AlbumRest',
+		'Magazinepublish',
+		'MagazinePublishRest',
     ),
     'module_listener_options' => array(
         'config_glob_paths'    => array(
